modifique el archivo index.html

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
               <tr>
                 <th>ID</th>
                 <th>Descripcion</th>
-                <th>aplica_para</th>
-                <th>mas_de_500</th>
-                <th>de_300_a_500</th>
+                <th>aplica para</th>
+                <th>mas de 500</th>
+                <th>de 300 a 500</th>
               </tr>
             </thead>
          
